# timeline-aggregation-protocol

./: .release-please-manifest.json  CONTRIBUTING.md  Cargo.toml  Dockerfile.tap_aggregator  README.md  justfile  release-please-config.json  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: containers.yml  conventional_commits.yml  dco_check.yml  license_headers_check.yml  publish_crates.yml  release_please.yml  tests.yml  todo-to-issue.yml
benches/: timeline_aggretion_protocol_benchmark.rs
lib/: Cargo.toml
lib/src/adapters/: allocation_adapter.rs  mod.rs
lib/src/adapters/test/: allocation_adapter_mock.rs
lib/src/tap_receipt/: mod.rs
src/: eip_712_signed_message.rs  lib.rs  receipt.rs  receipt_aggregate_voucher.rs
src/adapters/: mod.rs  rav_storage_adapter.rs
src/adapters/test/: collateral_adapter_mock.rs  mod.rs  rav_storage_adapter_mock.rs  receipt_adapter_mock.rs  receipt_adapter_test.rs
src/tap_receipt/: mod.rs  receipt.rs  received_receipt.rs
src/tap_receipt/tests/: mod.rs  receipt_tests.rs  received_receipt_tests.rs
tap_aggregator/: CHANGELOG.md  Cargo.toml  README.md  build.rs
tap_aggregator/proto/: tap_aggregator.proto  tap_aggregator_u256.proto  uint128.proto  uint256.proto  v2.proto  v2_u256.proto
tap_aggregator/src/: aggregator.rs  api_versioning.rs  error_codes.rs  grpc.rs  jsonrpsee_helpers.rs  lib.rs  main.rs  metrics.rs  protocol_mode.rs  receipt_classifier.rs  server.rs  tap_aggregator.rs
tap_aggregator/src/aggregator/: mod.rs  v1.rs  v2.rs
tap_aggregator/tests/: aggregate_test.rs  aggregate_v1_and_v2.rs
tap_core/: CHANGELOG.md  Cargo.toml
tap_core/benches/: timeline_aggretion_protocol_benchmark.rs
tap_core/src/: eip_712_signed_message.rs  error.rs  lib.rs  rav.rs  rav_request.rs  receipt.rs  receipt_aggregate_voucher.rs  signed_message.rs
tap_core/src/adapters/: collateral_adapter.rs  escrow_adapter.rs  mock.rs  mod.rs  rav_storage_adapter.rs  receipt_adapter.rs  receipt_checks_adapter.rs  receipt_storage_adapter.rs
tap_core/src/adapters/mock/: auditor_executor_mock.rs  executor_mock.rs  rav_storage_adapter_mock.rs  receipt_checks_adapter_mock.rs  receipt_storage_adapter_mock.rs
tap_core/src/adapters/test/: allocation_adapter_test.rs  collateral_adapter_mock.rs  collateral_adapter_test.rs  escrow_adapter_mock.rs  escrow_adapter_test.rs  mod.rs  rav_storage_adapter_mock.rs  rav_storage_adapter_test.rs  receipt_adapter_test.rs  receipt_checks_adapter_mock.rs  receipt_checks_adapter_test.rs  receipt_storage_adapter_mock.rs  receipt_storage_adapter_test.rs
tap_core/src/checks/: mod.rs
tap_core/src/manager/: manager.rs  mod.rs  tap_manager.rs
tap_core/src/manager/adapters/: escrow.rs  mod.rs  rav.rs  receipt.rs  signature.rs
tap_core/src/manager/context/: memory.rs  mod.rs
tap_core/src/manager/strategy/: escrow.rs  rav.rs  receipt.rs
tap_core/src/rav/: request.rs
tap_core/src/receipt/: checks.rs  error.rs  mod.rs  receipt_sol.rs  received_receipt.rs  state.rs
tap_core/src/tap_manager/: manager.rs  mod.rs  rav_request.rs
tap_core/src/tap_manager/test/: manager_test.rs  mod.rs
tap_core/src/tap_receipt/: checks.rs  mod.rs  receipt.rs  receipt_auditor.rs  received_receipt.rs
tap_core/src/tap_receipt/received_receipt/: received_receipt_unit_test.rs
tap_core/src/tap_receipt/tests/: mod.rs  receipt_tests.rs  received_receipt_tests.rs
tap_core/tests/: escrow_test.rs  manager_test.rs  rav_test.rs  receipt_test.rs  received_receipt_test.rs  showcase.rs
tap_core/tests/common/: mock.rs  mod.rs  timestamp.rs
tap_core/tests/indexer_mock/: mod.rs
tap_core/tests/snapshots/: rav_test__check_for_rav_serialization-2.snap  rav_test__check_for_rav_serialization.snap
tap_eip712_message/: CHANGELOG.md  Cargo.toml
tap_eip712_message/src/: lib.rs
tap_graph/: CHANGELOG.md  Cargo.toml
tap_graph/src/: lib.rs  rav.rs  receipt.rs  v1.rs
tap_graph/src/v1/: rav.rs  receipt.rs
tap_graph/src/v2/: rav.rs  receipt.rs
tap_integration_tests/: Cargo.toml  clippy.toml
tap_integration_tests/src/: lib.rs  server.rs
tap_integration_tests/tests/: indexer_mock.rs  lib.rs  showcase.rs
tap_integration_tests/tests/indexer_mock/: mod.rs
tap_receipt/: CHANGELOG.md  Cargo.toml
tap_receipt/src/: checks.rs  error.rs  lib.rs  rav.rs  received_receipt.rs  state.rs
