[workspace]
resolver = "2"
members = [
    "tap_aggregator",
    "tap_core",
    "tap_eip712_message",
    "tap_graph",
    "tap_integration_tests",
    "tap_receipt",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/semiotic-ai/timeline-aggregation-protocol"

[workspace.dependencies]
anyhow = { version = "1.0.98" }
anymap3 = "1.0.1"
async-trait = "0.1.88"
axum = { version = "0.8.3", features = [
    "http1",
    "json",
    "matched-path",
    "original-uri",
    "query",
    "tokio",
], default-features = false }
clap = { version = "4.5.37", features = ["derive", "env"] }
criterion = { version = "0.5.1", features = ["async_std"] }
futures-util = "0.3.31"
hyper = { version = "1.6.0", features = ["full"] }
insta = { version = "1.42.2", features = ["json"] }
jsonrpsee = { version = "0.25.1", features = ["macros", "server"] }
jsonrpsee-core = "0.25.1"
lazy_static = "1.5.0"
log = "0.4.27"
prometheus = "0.14.0"
prost = "0.14.1"
rand = "0.9.1"
rayon = "1.10.0"
rdkafka = { version = "0.37.0", features = ["tokio", "sasl"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
strum = { version = "0.27.1", features = ["derive"] }
rstest = "0.25.0"
tap_aggregator = { version = "0.5.4", path = "tap_aggregator" }
tap_eip712_message = { version = "0.2.1", path = "tap_eip712_message" }
tap_core = { version = "4.1.2", path = "tap_core" }
tap_graph = { version = "0.3.2", path = "tap_graph", features = ["v2"] }
tap_receipt = { version = "1.1.2", path = "tap_receipt" }
thegraph-core = "0.15.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["macros", "signal"] }
tonic = { version = "0.14.1", features = ["transport", "zstd"] }
tonic-build = "0.14.1"
tonic-prost-build = "0.14.1"
tower = { version = "0.5.2", features = ["util", "steer"] }
tracing-subscriber = "0.3.19"
