[package]
name = "tap_aggregator"
version = "0.5.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "A JSON-RPC service for the Timeline Aggregation Protocol that lets clients request an aggregate receipt from a list of individual receipts."

[[bin]]
name = "tap_aggregator"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
futures-util.workspace = true
hyper.workspace = true
jsonrpsee.workspace = true
lazy_static.workspace = true
log.workspace = true
prometheus.workspace = true
prost.workspace = true
rayon.workspace = true
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tap_core = { path = "../tap_core", version = "4.1.0" }
tap_graph = { version = "0.3.0", path = "../tap_graph", features = ["v2"] }
thegraph-core = { workspace = true, features = ["alloy-eip712"] }
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build = "0.13.0"

[dev-dependencies]
rand.workspace = true
rstest.workspace = true
