[package]
name = "tap_aggregator"
version = "0.6.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "A JSON-RPC service for the Timeline Aggregation Protocol that lets clients request an aggregate receipt from a list of individual receipts."

[features]
default = ["v2"]
v2 = ["tap_graph/v2"]

[[bin]]
name = "tap_aggregator"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
futures-util.workspace = true
hyper.workspace = true
jsonrpsee.workspace = true
lazy_static.workspace = true
log.workspace = true
prometheus.workspace = true
prost.workspace = true
rayon.workspace = true
rdkafka.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tap_core.workspace = true
tap_graph.workspace = true
thegraph-core = { workspace = true, features = ["alloy-eip712"] }
tokio.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tower = { workspace = true, features = ["util", "steer", "limit"] }
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build.workspace = true
tonic-prost-build.workspace = true

[dev-dependencies]
rand.workspace = true
rstest.workspace = true
