[package]
name = "tap_core"
version = "4.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Core Timeline Aggregation Protocol library: a fast, efficient and trustless unidirectional micro-payments system."

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
rand.workspace = true
tap_eip712_message.workspace = true
tap_graph = { workspace = true, optional = true }
tap_receipt.workspace = true
thegraph-core.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
serde_json.workspace = true

[features]
default = ["in_memory"]
in_memory = ["dep:tap_graph"]
