[package]
name = "tap_eip712_message"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "EIP712 singed messages used by TAP"

[dependencies]
serde.workspace = true
thegraph-core.workspace = true
thiserror.workspace = true


[dev-dependencies]
msg = { path = "../tap_graph", package = "tap_graph" }
