[package]
name = "tap_graph"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Graph TAP receipt structs"

[dependencies]
rand.workspace = true
serde.workspace = true
tap_eip712_message = { version = "0.1.0", path = "../tap_eip712_message" }
tap_receipt = { version = "0.1.0", path = "../tap_receipt" }
thegraph-core.workspace = true


[dev-dependencies]
rstest.workspace = true


[features]
default = []
v2 = []
