[package]
name = "tap_graph"
version = "0.3.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "The Graph TAP receipt structs"

[dependencies]
rand.workspace = true
serde.workspace = true
tap_eip712_message.workspace = true
tap_receipt.workspace = true
thegraph-core.workspace = true


[dev-dependencies]
rstest.workspace = true


[features]
default = []
v2 = []
