[package]
name = "tap_integration_tests"
version = "0.1.16"
edition.workspace = true
license.workspace = true
repository.workspace = true
autotests = false
description = "Integration tests for the Timeline Aggregation Protocol."
publish = false

[dependencies]
tap_aggregator = { path = "../tap_aggregator" }
tap_core = { path = "../tap_core", version = "4.1.0" }
tap_graph = { path = "../tap_graph" }

anyhow.workspace = true
jsonrpsee = { workspace = true, features = ["jsonrpsee-http-client"] }
jsonrpsee-core.workspace = true
rand.workspace = true
thegraph-core.workspace = true
tokio.workspace = true

[dev-dependencies]
rstest.workspace = true
thegraph-core = { workspace = true, features = ["alloy-signer-mnemonic"] }

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
