[package]
name = "tap_integration_tests"
version = "0.1.23"
edition.workspace = true
license.workspace = true
repository.workspace = true
autotests = false
description = "Integration tests for the Timeline Aggregation Protocol."
publish = false

[dependencies]
tap_aggregator.workspace = true
tap_core.workspace = true
tap_graph.workspace = true

anyhow.workspace = true
jsonrpsee = { workspace = true, features = ["jsonrpsee-http-client"] }
jsonrpsee-core.workspace = true
rand.workspace = true
tokio.workspace = true

[dev-dependencies]
rstest.workspace = true
thegraph-core = { workspace = true, features = ["alloy-signer-mnemonic"] }

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
