[package]
name = "tap_receipt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TAP Receipt states and checks"

[dependencies]
alloy.workspace = true
anyhow.workspace = true
anymap3 = "1.0.1"
thiserror.workspace = true
serde.workspace = true
async-trait = "0.1.85"
tap_eip712_message = { version = "0.1.0", path = "../tap_eip712_message" }

[dev-dependencies]
tokio.workspace = true
