[package]
name = "tap_receipt"
version = "1.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "TAP Receipt states and checks"

[dependencies]
anyhow.workspace = true
anymap3.workspace = true
async-trait.workspace = true
serde.workspace = true
tap_eip712_message.workspace = true
thegraph-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
